--- a/content/post/eslii/ch02/ch02_03.zh.md
+++ b/content/post/eslii/ch02/ch02_03.zh.md
@@ -53,7 +53,7 @@ $$\hat{Y} = X^T \hat{\beta} \tag{2.2}$$
 
 那么如何从训练数据集中拟合线性模型？
 方法有很多，其中目前最流行的方法为最小二乘法（least squares），
-即寻找使得残差平方（residual sum of squares, RSS）和最小的参数 $\beta$：
+即寻找使得残差平方和（residual sum of squares, RSS）最小的参数 $\beta$：
 
 $$\text{RSS}(\beta) = \sum\_{i=1}^N (y\_i - x\_i^T \beta)^2 \tag{2.3}$$
 
