--- a/content/post/eslii/ch02/ch02_05.zh.md
+++ b/content/post/eslii/ch02/ch02_05.zh.md
@@ -1,5 +1,5 @@
 +++
-title = "ESL-2.5 高维度问题的局部方法"
+title = "ESL-2.5 局部方法中的高维度问题"
 summary = """
 统计学习基础（译注）第二章第五节，第 22-27 页。
 通过几个例子，说明维数灾难如何导致理论上完美的模型却在实际应用中会失效。
@@ -10,7 +10,7 @@ lastmod = 2018-09-04T09:31:07+08:00
 draft = false
 math = true
 
-authors = ["Butters"]
+authors = ["Butters", "2018"]
 
 tags = ["译文", "2018"]
 categories = ["统计学习基础（译注）"]
