--- a/content/post/eslii/ch02/ch02_06.zh.md
+++ b/content/post/eslii/ch02/ch02_06.zh.md
@@ -1,7 +1,7 @@
 +++
 title = "ESL-2.6 统计模型、监督学习和函数逼近"
 summary = """
-统计学习基础（译注）第二章第五节，第 28-32 页。
+统计学习基础（译注）第二章第六节，第 28-32 页。
 一些关于模型的统计学角度的基础框架，将时髦的机器学习回归到经典数学中的函数逼近问题和统计学中的概率模型。
 """
 
