--- a/content/post/eslii/ch02/ch02_02.zh.md
+++ b/content/post/eslii/ch02/ch02_02.zh.md
@@ -30,7 +30,7 @@ preview = true
 事实上这类变量也通常用解释性的标签而不是数字来标记取值。
 定性变量也通常被称为 *分类（categorical）* 、 *离散（discrete）* 、或 *因子（factors）* 变量。
 
-自然我们想用一些输入变量来预测输出变量。
+统计学习的目的即是用一些输入变量来预测输出变量。
 比如，利用一些昨天和今天的特定气象指标，我们希望预测明天的臭氧浓度；
 利用数字化后手写数字图片中每个像素点的灰度值，我们希望预测这个手写数字是几。
 
