--- a/content/post/eslii/ch01/ch01_00.zh.md
+++ b/content/post/eslii/ch01/ch01_00.zh.md
@@ -95,7 +95,7 @@ preview = true
 研究的目的是基于一些临床指标来预测取对数后的 PSA 水平（lpsa），
 这些指标包括癌肿瘤体积的对数（lcavol），
 前列腺重量的对数（lweight），
-年龄，
+年龄（age），
 良性前列腺增生数量的对数（lbph），
 是否存在精囊侵袭（svi）,
 囊穿透的对数（lcp），
