--- a/content/post/eslii/ch03/ch03_02.zh.md
+++ b/content/post/eslii/ch03/ch03_02.zh.md
@@ -339,7 +339,7 @@ $$F = \frac{(32.81 - 29.43) / (9 - 5)}{29.43 / (67 - 9)} \tag{3.16}$$
 在用训练集的输出变量 lpse 的均值作为测试集的预测时，相应的平均预测误差为 1.057，
 这也被称为“基础误差率（base error rate）”。
 因此，线性模型的误差率比基础误差率小了大于 50%。
-稍后章节我们会回到这个实例来对比不同的特征选择和 *缩减（shrinkage）* 方法。
+稍后章节我们会回到这个实例来对比不同的特征选择和 *收缩（shrinkage）* 方法。
 
 ### 3.2.2 高斯－马尔可夫定理
 
