Finish ch03_08 and ch03_09.

--- a/content/post/eslii/ch03/ch03_04.zh.md
+++ b/content/post/eslii/ch03/ch03_04.zh.md
@@ -614,6 +614,6 @@ $\text{df}(\hat{\mathbf{y}})$ 近似于当前模型包含的自变量个数。
 [^4]: $\mathbf{X}\_{\mathcal{A}\_k}$ 为只包含 $\mathcal{A}\_k$ 中的变量的输入变量矩阵，其列维度等于集合 $\mathcal{A}\_k$ 中变量的个数。
 [^5]: 当出现某个另外的变量，其与残差的相关性与这两个变量相同时，停止移动，并将这个变量加入到模型。
 [^6]: 这里描述的算法与原文的差异较大，因为原文过于简略，译者在理解时比较吃力。
-[^7]: 原文脚注二：某个定义在 $s\in [0,S]$ 上的可微曲线 $\beta(s)$ 的 $L\_1$ 弧长为：$\text{TV}(\beta, S) = \int\_0^S \\|\dot{\beta}(s)\\|\_1 ds$，其中 $\dot{\beta}(s) = \partial \beta(s) / \partial s$。在分段线性的最小角回归系数曲线中，这个长度的含义为每一步系数线性移动的 $L\_1$ 范式的和。
+[^7]: 原文脚注2：某个定义在 $s\in [0,S]$ 上的可微曲线 $\beta(s)$ 的 $L\_1$ 弧长为：$\text{TV}(\beta, S) = \int\_0^S \\|\dot{\beta}(s)\\|\_1 ds$，其中 $\dot{\beta}(s) = \partial \beta(s) / \partial s$。在分段线性的最小角回归系数曲线中，这个长度的含义为每一步系数线性移动的 $L\_1$ 范式的和。
 [^8]: 自适应拟合（adaptively fitted）模型，译者的理解是这种模型会主动地根据训练集的数据来决定本身的回归方程，例如最优变量子集选择方法。
 [^9]: 原文为“sampling covariance”，译者理解指的是“population covariance”。
