Copy text: ch04_03.

--- a/content/post/eslii/ch04/ch04_02.zh.md
+++ b/content/post/eslii/ch04/ch04_02.zh.md
@@ -136,7 +136,7 @@ $$\hat{G}(x) =
 这是一个比较困难的分类问题，在测试集上表现最好的方法的错误率仍为 40%。
 表 4.1 中列出了不同分类方法的错误率，
 从中可见线性回归的错误率为 67%，
-与其关联的线性判定分析的错误率为 56%。
+与其关联的线性判别分析的错误率为 56%。
 看起来屏蔽问题在这个案例中造成了困难。
 虽然本章中其他的方法也同样基于输入变量的线性函数，
 但它们采取的应用方式可以避免屏蔽问题。
@@ -148,7 +148,7 @@ $$\hat{G}(x) =
 | 分类方法 | 训练集错误率 | 测试集错误率 |
 |--------|-------------|------------|
 | 线性回归    | 0.48 | 0.67 |
-| 线性判定分析 | 0.32 | 0.56 |
+| 线性判别分析 | 0.32 | 0.56 |
 | 二次判定分析 | 0.01 | 0.53 |
 | 对数几率回归 | 0.22 | 0.51 |
 **表4.1**：各种线性分类方法在元音识别问题的训练集和测试集错误率。
