--- a/content/post/eslii/ch04/ch04_02.zh.md
+++ b/content/post/eslii/ch04/ch04_02.zh.md
@@ -142,7 +142,7 @@ $$\hat{G}(x) =
 但它们采取的应用方式可以避免屏蔽问题。
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_04.png"
-  title="**图4.4**：元音识别训练数据的二维投影图。共有 11 个类型，输入变量空间为 $X\in \mathbb{R}^{10}$，and this is the best view in terms of a LDA model (第 4.3.3 节). 加粗的圆点为每个类型的 projected mean vectors。The class overlap is considerable."
+  title="**图4.4**：元音识别训练数据的二维投影图。共有 11 个类型，输入变量空间为 $X\in \mathbb{R}^{10}$，这是线性判别模型中最优的二维投影子空间（见第 4.3.3 节）。加粗的圆点为每个类型的均值中心向量在这个空间的投射点。图中各个类型有明显的重叠。"
 >}}
 
 | 分类方法 | 训练集错误率 | 测试集错误率 |
