Copy text: ch05_02.

--- a/content/post/eslii/ch05/ch05_01.zh.md
+++ b/content/post/eslii/ch05/ch05_01.zh.md
@@ -2,6 +2,7 @@
 title = "ESL-5.1 引言"
 summary = """
 统计学习基础（译注）第五章第一节，第 139-141 页。
+第五章为基拓展及其正则化方法，进入非线性方法的范畴。
 """
 
 date = 2018-10-17T09:39:00+08:00
