--- a/content/post/eslii/ch05/ch05_04.zh.md
+++ b/content/post/eslii/ch05/ch05_04.zh.md
@@ -26,7 +26,7 @@ preview = true
 本节介绍一个将所有样本点作为结点从而不涉及结点选择问题的样条基函数方法。
 用正则化对拟合的复杂度进行控制。
 考虑这样的问题：
-从所有含有二次连续导数的函数 $f(x)$ 中寻找使得补偿（penalized）残差平方和最小化的函数：
+从所有含有二次连续导数的函数 $f(x)$ 中寻找使得惩罚（penalized）残差平方和最小化的函数：
 
 $$\text{RSS}(f, \lambda) =
   \sum\_{i=1}^N \\{y\_i - f(x\_i)\\}^2 + \lambda\int\\{f^{\prime\prime}(t)\\}^2 dt
