Word change: 判定边界 => 判别边界

--- a/content/post/eslii/ch02/ch02_04.zh.md
+++ b/content/post/eslii/ch02/ch02_04.zh.md
@@ -152,11 +152,11 @@ $$\hat{G}(x) = \mathcal{G}\_k \text{ if } \text{Pr}(\mathcal{G}\_k|X=x) =
 
 上式的解也被称为 *贝叶斯分类器（Bayes classifier）* ,
 从直觉上很容易理解这个等式，即根据离散的条件概率分布 $\text{Pr}(G|X)$，对于某个点赋予其条件概率最大的分类。
-图 2.5 展示了上一节模拟示例的贝叶斯最优判定边界。
+图 2.5 展示了上一节模拟示例的贝叶斯最优判别边界。
 贝叶斯分类器的错误率也称为贝叶斯错误率。
 
 {{< figure src="http://public.guansong.wang/eslii/ch02/eslii_fig_02_05.png"
-  title="**图2.5**：使用与图 2.1、2.2、2.3 同样模拟数据的最优贝叶斯判定边界。由于数据的生成模型已知，所以可以确定地计算出这个边界。（习题2.2）"
+  title="**图2.5**：使用与图 2.1、2.2、2.3 同样模拟数据的最优贝叶斯判别边界。由于数据的生成模型已知，所以可以确定地计算出这个边界。（习题2.2）"
 >}}
 
 我们再一次注意到 k-近邻分类器，在最近邻域上的少数服从多数投票，直接地实现等式 2.23。
