--- a/content/post/eslii/ch04/ch04_02.zh.md
+++ b/content/post/eslii/ch04/ch04_02.zh.md
@@ -100,11 +100,11 @@ $$\hat{G}(x) =
 然而在类型数量 $K\geq 3$，尤其在 $K$ 比较大时，这种利用回归来分类的方法存在严重的问题。
 由于线性假设的直线性质，某些类型可能会被其他类型 *屏蔽（masked)* 。
 图 4.2 以 $K=3$ 下的一个极端例子演示了这个问题。
-其中的样本有三个类型，可以完美地被线性判定边界区分开，
+其中的样本有三个类型，可以完美地被线性判别边界区分开，
 而线性回归的分类模型却完全无法产生中间那部分点的类型[^1]。
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_02.png"
-  title="**图4.2**：在 $\mathbb{R}^2$ 的输入变量空间上的三种类型的样本点，可明显地被线性判定边界所区分。右图为线性判别分析所生成的边界。左图为对指示输出变量的线性回归所生成的边界，其中间类型的训练样本点完全被错误分类（其拟合向量的第二个元素永远小于第一个和第三个元素）。"
+  title="**图4.2**：在 $\mathbb{R}^2$ 的输入变量空间上的三种类型的样本点，可明显地被线性判别边界所区分。右图为线性判别分析所生成的边界。左图为对指示输出变量的线性回归所生成的边界，其中间类型的训练样本点完全被错误分类（其拟合向量的第二个元素永远小于第一个和第三个元素）。"
 >}}
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_03.png"
