--- a/content/post/eslii/ch04/ch04_03.zh.md
+++ b/content/post/eslii/ch04/ch04_03.zh.md
@@ -41,7 +41,7 @@ $\text{Pr}(G=k|X=x)$ 可提供的信息。
 很多方法都是基于对类型条件密度函数的建模：
 
 * 使用高斯分布密度的线性和二次判别分析；
-* 使用更灵活的高斯混合分布，可允许非线性判定边界（第 6.8 节）；
+* 使用更灵活的高斯混合分布，可允许非线性判别边界（第 6.8 节）；
 * 最灵活的对每个类别进行一般性的非参数密度函数估计（第 6.6.2 节）；
 * 朴素贝叶斯模型（第 6.6.3 节）为上者的一个变体，假设每个类型的密度函数均为边际密度函数的乘积；
   即假设条件于各个类型时，输入变量之间相互独立（第 6.6.3 节）。
@@ -69,24 +69,24 @@ x^T\mathbf{\Sigma}^{-1}(\mu\_k - \mu\_l)
 此为一个关于 $x$ 的线性函数。
 其中正态分布的常数项部分被抵消掉；
 两个概率中的协方差矩阵相同，导致二次项被抵消掉。
-线性的对数几率函数使得类型 k 和 l 之间的判定边界对 x 为线性；
+线性的对数几率函数使得类型 k 和 l 之间的判别边界对 x 为线性；
 即使得 $\text{Pr}(G=k|X=x) = \text{Pr}(G=l|X=x)$
 的点组成了 p 维空间中的一个超平面。
-对任意两个类型，上述结论都成立，所以所有的判定边界均为线性。
+对任意两个类型，上述结论都成立，所以所有的判别边界均为线性。
 若将输入变量空间 $\mathbb{R}^p$ 分成不同类型的区间，
 那么这些区间的边界均为超平面。
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_05.png"
-  title="**图4.5**：左图为三个高斯分布，其协方差矩阵相同，均值不同。椭圆形为包围了概率为 95% 的区域的等概率密度曲线。每两个类型之间的贝叶斯判定边界为图中的虚线，三个类型之间相互的贝叶斯判定边界为图中的实线（实际为前者虚线的一部分）。右图为从三个高斯分布生成的每个类型 30 个数据点，以及线性判别分析生成的判定边界。"
+  title="**图4.5**：左图为三个高斯分布，其协方差矩阵相同，均值不同。椭圆形为包围了概率为 95% 的区域的等概率密度曲线。每两个类型之间的贝叶斯判别边界为图中的虚线，三个类型之间相互的贝叶斯判别边界为图中的实线（实际为前者虚线的一部分）。右图为从三个高斯分布生成的每个类型 30 个数据点，以及线性判别分析生成的判别边界。"
 >}}
 
 图 4.5 的左图显示了 3 个类型 2 个输入变量的例子。
 输入变量服从高斯分布，其协方差矩阵相同。
 椭圆形为包围了概率为 95% 的区域的等概率密度曲线，
 十字标记点为类型的中心点。
-需要注意两个类型之间的判定边界并不是其中心点连线的垂直平分线。
+需要注意两个类型之间的判别边界并不是其中心点连线的垂直平分线。
 只有当协方差矩阵 $\mathbf{\Sigma}$ 为 $\sigma^2\mathbf{I}$ 的形式，
-并且类型的边际概率相同时，判定边界才是其中心点连线的垂直平分线。
+并且类型的边际概率相同时，判别边界才是其中心点连线的垂直平分线。
 
 通过等式 4.9，可证明
 *线性判别函数（linear discriminant function）*
@@ -104,11 +104,11 @@ $G(x) = \text{argmax}\_k\delta\_k(x)$。
 * $\hat{\mu}\_k = \sum\_{g\_i = k} x\_i / N\_k$；
 * $\hat{\mathbf{\Sigma}} = \sum\_{k=1}^K \sum\_{g\_i=k} (x\_i-\hat{\mu}\_k)(x\_i - \hat{\mu}\_k)^T / (N-K)$。
 
-图 4.5 的右图为建立在每个类型生成了 30 个高斯分布样本点上的估计判定边界。
+图 4.5 的右图为建立在每个类型生成了 30 个高斯分布样本点上的估计判别边界。
 图 4.1 为另一个线性判别分析的例子，其中各个类型的条件概率分布不是高斯分布。
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_01.png"
-  title="**图4.1**：以三个类型的数据为例。左图为线性判别分析产生的线性判定边界；右图为二次判定边界，通过对五个输入变量 $X\_1$、$X\_2$、$X\_1X\_2$、$X\_1^2$、$X\_2^2$ 产生的线性判定边界。此空间上的线性判定比较相当于原空间上的二次判定比较。"
+  title="**图4.1**：以三个类型的数据为例。左图为线性判别分析产生的线性判别边界；右图为二次判别边界，通过对五个输入变量 $X\_1$、$X\_2$、$X\_1X\_2$、$X\_1^2$、$X\_2^2$ 产生的线性判别边界。此空间上的线性判定比较相当于原空间上的二次判定比较。"
 >}}
 
 在两个类型的问题中，线性判别分析与线性回归分类（等式 4.5）存在简单的对应关系。
@@ -150,16 +150,16 @@ $$ \delta\_k(x) =
 \log \pi\_k
 \tag{4.12}$$
 
-每两个类型 k 和 l 之间的判定边界为一个二次函数曲线
+每两个类型 k 和 l 之间的判别边界为一个二次函数曲线
 $\\{x: \delta\_k(x) = \delta\_l(x)\\}$。
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_06.png"
-  title="**图4.6**：二次函数边界的两种拟合方法，数据与图 4.1 相同。左图为在五维输入向量空间（$X\_1$，$X\_2$，$X\_1X\_2$，$X\_1^2$，$X\_2^2$）上的线性判别分析；右图为直接使用二次判别分析产生的判定边界。两者通常差别不大。"
+  title="**图4.6**：二次函数边界的两种拟合方法，数据与图 4.1 相同。左图为在五维输入向量空间（$X\_1$，$X\_2$，$X\_1X\_2$，$X\_1^2$，$X\_2^2$）上的线性判别分析；右图为直接使用二次判别分析产生的判别边界。两者通常差别不大。"
 >}}
 
 图 4.6 以三类型的高斯混合分布（见第 6.8 节）为例（数据与图 4.1 相同），
-用 x 的二次函数拟合判定边界。
-图中展示了两种常见的二次判定边界拟合方法。
+用 x 的二次函数拟合判别边界。
+图中展示了两种常见的二次判别边界拟合方法。
 右图即为上述的二次判别分析方法拟合，
 而左图为将原二维输入向量空间进行二次项拓展后的五维空间上的线性判别分析。
 通常两者的差别不大，
@@ -168,7 +168,7 @@ $\\{x: \delta\_k(x) = \delta\_l(x)\\}$。
 
 二次判别分析的估计方法与线性判别方法类似，除了需要对每个类别分别估计协方差矩阵。
 当 p 比较大时，这会导致参数维度的巨大增加。
-由于判定边界同时为密度函数中参数的函数，
+由于判别边界同时为密度函数中参数的函数，
 所以有必要清楚确定算法所用到的参数个数。
 线性判别分析的参数个数为 $(K-1) \times (p+1)$，
 因为实际上只需要先选中一个类型后（这里选择了最后一个）
@@ -186,10 +186,10 @@ $\\{x: \delta\_k(x) = \delta\_l(x)\\}$。
 也有关于为何线性和二次判别分析的表现如此良好的讨论。
 实际场景中的数据不可能总会近似符合高斯分布的假设，
 而不同类型的密度函数中协方差矩阵相同的假设也很不可能被满足。
-一个可能的解释是真实的数据只能支持低复杂度的判定边界，例如线性或二次函数，
+一个可能的解释是真实的数据只能支持低复杂度的判别边界，例如线性或二次函数，
 并且基于高斯模型的估计有比较好的稳定性。
 这涉及了偏差和方差的权衡：
-线性判定边界的偏差换来了比其他更神奇分类方法更小的估计方差。
+线性判别边界的偏差换来了比其他更神奇分类方法更小的估计方差。
 二次判别分析中的参数个数并不少，所以这个解释的可信度不如线性判别分析，
 但尽管如此，其参数个数仍要比其他非参数的方法少了很多。
 
@@ -364,7 +364,7 @@ $a\_2^T\mathbf{B}a\_2 / a\_2^T\mathbf{W}a\_2$ 最大的向量，
 
 本节的讨论大致可总结如下：
 
-* 在同协方差矩阵的高斯分布假设下，分类问题可推导出线性的判定边界。
+* 在同协方差矩阵的高斯分布假设下，分类问题可推导出线性的判别边界。
   分类时先将原始数据根据 $\mathbf{W}$ 球形化，
   再将球形空间上的点分类到与其最近（模除 $\log \pi\_k$）的中心点。
 * 因为在分类时只需要对比这个点与各个类型中心点的相对距离，
@@ -392,14 +392,14 @@ $a\_2^T\mathbf{B}a\_2 / a\_2^T\mathbf{W}a\_2$ 最大的向量，
 以元音识别数据为例，可说明降维限制对分类问题的作用。
 数据中有 11 个类型和 10 个输入变量，因此分类分析的空间有 10 个维度。
 在这些维度组成的子空间序列上计算训练集和测试集的误判率，图 4.10 为结果曲线。
-图 4.11 展示了在二维线性判别分析中的判定边界。
+图 4.11 展示了在二维线性判别分析中的判别边界。
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_10.png"
-  title="**图4.10**：元音识别数据的训练集和测试集误差曲线，横轴为判别子空间的维度。此例中最优的测试集误差在维度为 2 时。图 4.11 为这个二维空间上的判定边界。"
+  title="**图4.10**：元音识别数据的训练集和测试集误差曲线，横轴为判别子空间的维度。此例中最优的测试集误差在维度为 2 时。图 4.11 为这个二维空间上的判别边界。"
 >}}
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_11.png"
-  title="**图4.11**：元音识别数据在前两个典型变量生成的二维子空间上的判定边界。注意在更高维的子空间上，判定边界为高于一维的仿射平面，无法用线来可视化。"
+  title="**图4.11**：元音识别数据在前两个典型变量生成的二维子空间上的判别边界。注意在更高维的子空间上，判别边界为高于一维的仿射平面，无法用线来可视化。"
 >}}
 
 费雪降秩判别分析与指示输出向量的回归模型有紧密的联系。
@@ -409,8 +409,8 @@ $a\_2^T\mathbf{B}a\_2 / a\_2^T\mathbf{W}a\_2$ 最大的向量，
 另外，在回归生成的拟合 $\hat{\mathbf{Y}}$ 进行线性判别分析，
 其结果与在原数据中的线性判别分析一致（练习 4.3）。
 
-[^1]: 原文脚注 2：本图和此书中其他类似图中的判定边界，由穷举轮廓方法（exhaustive contouring method）计算得出：在密集的点阵上计算每个点的分类，然后用轮廓（contouring）算法来计算边界。
-[^2]: 原文脚注 3：尽管在计算线性判别分析的判别函数时需要协方差矩阵的估计 $\hat{\mathbf{\Sigma}}$，但如果只为了估计计算判定边界所必须的 $O(p)$ 个参数，可以使用一个更简化的函数。
+[^1]: 原文脚注 2：本图和此书中其他类似图中的判别边界，由穷举轮廓方法（exhaustive contouring method）计算得出：在密集的点阵上计算每个点的分类，然后用轮廓（contouring）算法来计算边界。
+[^2]: 原文脚注 3：尽管在计算线性判别分析的判别函数时需要协方差矩阵的估计 $\hat{\mathbf{\Sigma}}$，但如果只为了估计计算判别边界所必须的 $O(p)$ 个参数，可以使用一个更简化的函数。
 [^3]: STATLOG 是由欧盟在 90 年代资助的科研项目，目的在于审视当时领域中的各种分类方法，在多样的数据集中比较它们的分类表现，从而评估它们解决实际问题的能力。[UCI 机器学习资源库](http://archive.ics.uci.edu/ml/datasets/Statlog+project) 提供了这些数据集的说明和下载链接。
 [^4]: 译者的理解是，元音识别的数据中，有很多类似的读音但对应了不同的元音分类，导致一部分输入空间上的点对应着不同的类型，导致训练集和测试集中相近的点却对应了不同的类型。
 [^5]: 空间中的 $K$ 个点可组成 $K-1$ 维度的空间，例如 3 个点可形成一个平面（二维空间）。并且如果这 $K$ 个点中存在线性组合关系，则组成的子空间维度小于 $K-1$，例如 3 个在一条直线上的点，只能形成一维的子空间。
