--- a/content/post/eslii/ch04/ch04_04.zh.md
+++ b/content/post/eslii/ch04/ch04_04.zh.md
@@ -412,7 +412,7 @@ $$\text{Pr}(X) = \sum\_{k=1}^K \pi\_k \phi(X;\mu\_k, \mathbf{\Sigma})
 则在似然度中忽略边际部分，会在渐进误差率中丢失高至 30% 的信息（Efron, 1975）。
 原结论复述为：基于条件似然度的估计在样本量多 30% 时能达到同样的拟合程度。
 
-远离判定边界的样本点，在对数几率回归中会赋予低权重，
+远离判别边界的样本点，在对数几率回归中会赋予低权重，
 但在线性判别分析中仍被用于估计协方差矩阵。
 但这也会使得线性判别分析对离群值不够稳定。
 
