--- a/content/post/eslii/ch04/ch04_05.zh.md
+++ b/content/post/eslii/ch04/ch04_05.zh.md
@@ -21,9 +21,9 @@ preview = true
 +++
 
 本章之前所介绍的线性判别分析和对数几率回归，
-都针对线性判定边界进行估计，估计的方法略有不同。
+都针对线性判别边界进行估计，估计的方法略有不同。
 本节介绍的是分类超平面分类器。
-这类算法直接寻找可最大程度区分不同类型的的线性判定边界。
+这类算法直接寻找可最大程度区分不同类型的的线性判别边界。
 第十二章中的支持向量机分类器即以此方法为基础。
 相较于本章其他部分，本节所涉及的数学知识稍微高一些。
 
@@ -44,7 +44,7 @@ $$\\{x:\hat{\beta}\_0 + \hat{\beta}\_1 x\_1 + \hat{\beta}\_2 x\_2 = 0
 最小二乘解没有完美地区分样本点，其中有一个误分类。
 在二分类问题中，线性判别分析与线性回归是等价的
 （[第 4.3 节]({{< ref "/post/eslii/ch04/ch04_03.zh.md" >}}) 以及练习 4.2），
-所以这也是线性判别分析的判定边界。
+所以这也是线性判别分析的判别边界。
 
 等式 4.39 中的分类器根据输入特征变量的线性组合的符号进行分类，
 在 1950 年代末的工程领域（Rosenblatt, 1958）称之为 *感知器（perceptrons）* 。
@@ -77,7 +77,7 @@ $$\\{x:\hat{\beta}\_0 + \hat{\beta}\_1 x\_1 + \hat{\beta}\_2 x\_2 = 0
 ### 4.5.1 Rosenblatt 感知器学习算法
 
 *感知器学习算法（perceptron learning algorithm）*
-通过最小化误分类的点与判定边界之间的距离来寻找分离超平面。
+通过最小化误分类的点与判别边界之间的距离来寻找分离超平面。
 若一个点的输出分类 $y\_i = 1$ 被误分类为 $-1$，
 则 $x\_i^T \beta + \beta\_0 < 0 $；
 对 $y\_i = -1$ 的点则相反。
@@ -87,7 +87,7 @@ $$D(\beta, \beta\_0) = -\sum\_{i\in\mathcal{M}} y\_i(x\_i^T\beta + \beta\_0)
 \tag{4.41}$$
 
 其中的 $\mathcal{M}$ 代表被误分类点的集合。
-这个非负的值与误分类点与判定边界 $\beta^T x + \beta\_0=0$ 的距离成正比。
+这个非负的值与误分类点与判别边界 $\beta^T x + \beta\_0=0$ 的距离成正比。
 梯度为（视 $\mathcal{M}$ 为给定集合）：
 
 $$\begin{align}
@@ -149,7 +149,7 @@ $$\begin{gather}
 y\_i(x\_i^T\beta + \beta\_0) \geq M, i = 1,\dots, N
 \end{gather}\tag{4.45}$$
 
-这组约束条件保证了所有的点与 $\beta$ 和 $\beta\_0$ 确定的判定边界之间的距离
+这组约束条件保证了所有的点与 $\beta$ 和 $\beta\_0$ 确定的判别边界之间的距离
 都大于带符号的距离 $M$，
 最优化解为可以使这个距离 $M$ 最大的相应参数。
 通过重写约束条件可去掉 $\\|\beta\\|=1$ 的约束条件：
@@ -172,7 +172,7 @@ $$\begin{gather}
 y\_i(x\_i^T\beta + \beta\_0) \geq 1, i = 1,\dots, N
 \end{gather}\tag{4.48}$$
 
-通过等式 4.40，这些约束条件可以想象为在线性判定边界周围定义了
+通过等式 4.40，这些约束条件可以想象为在线性判别边界周围定义了
 厚度为 $1 / \\|\beta\\|$ 的空白边际区间。
 $\beta$ 和 $\beta\_0$ 的解最大化这个区间的厚度。
 这是一个凸优化问题（二次项的准则和线性不等式的约束条件）。
@@ -222,7 +222,7 @@ $\beta\_0$ 也类似地在支持点对等式 4.53 求解得出。
 
 
 {{< figure src="http://public.guansong.wang/eslii/ch04/eslii_fig_04_16.png"
-  title="**图4.16**：与图 4.14 同样的数据。黄色阴影区域描述了分离两个类型的最大边际区域。共有三个支持点，落在边际区域的边界上，最优分离超平面（蓝色直线）平分这个区域。图中也包括了对数几率回归生成的判定边界（红色直线），其与最优分离超平面非常相近（见第 12.3.3 节）。"
+  title="**图4.16**：与图 4.14 同样的数据。黄色阴影区域描述了分离两个类型的最大边际区域。共有三个支持点，落在边际区域的边界上，最优分离超平面（蓝色直线）平分这个区域。图中也包括了对数几率回归生成的判别边界（红色直线），其与最优分离超平面非常相近（见第 12.3.3 节）。"
 >}}
 
 最优分离超平面生成一个可用来对新样本分类的判定函数
@@ -238,7 +238,7 @@ $$ \hat{G}(x) = \text{sign}(\hat{f}(x))
 
 最优分离超平面的解，从设计上更依赖于边界上的支持点，
 因而看起来对模型误设（misspecification）更稳健。
-相比之下，线性判别分析的解建立在所有的数据之上，包含远离判定边界的点。
+相比之下，线性判别分析的解建立在所有的数据之上，包含远离判别边界的点。
 但需要指出的是支持点也是从所有的数据中生成的。
 当然，若真实的数据为高斯分布，则线性判别分析为最优的方法，
 分离超平面过于依赖于类型边界附近的数据，影响其分类效果。
@@ -249,7 +249,7 @@ $$ \hat{G}(x) = \text{sign}(\hat{f}(x))
 所以对数几率回归的解也必然是一个分离超平面（练习 4.5）。
 对数几率回归的解与分离超平面的解还有另外的一些相似特性。
 其通过零和并线性化的输入变量对输入特征变量的加权最小二乘拟合确定系数向量，
-在判定边界附近点的权重要高于远离边界的点。
+在判别边界附近点的权重要高于远离边界的点。
 
 当数据中的类型无法分离，这个方法无法求解，需要对其进行修改。
 用基函数转化来扩大输入变量空间同样可能解决这个问题，
