--- a/content/post/eslii/ch05/ch05_01.zh.md
+++ b/content/post/eslii/ch05/ch05_01.zh.md
@@ -27,7 +27,7 @@ preview = true
 对 $f(X)$ 的线性假设常常是一个方便的近似，有时可能是必要的简化。
 由于线性函数易于理解，并可视为是 $f(X)$ 的一阶泰勒近似，所以“方便”；
 在 $N$ 比较小而且 $p$ 比较大时，有可能线性模型是唯一可避免过拟合的方法，所以“有时必要”。
-在分类问题中也类似，线性的贝叶斯最优判定边界假定
+在分类问题中也类似，线性的贝叶斯最优判别边界假定
 $\text{Pr}(Y=1|X)$ 的某种单调转化为 $X$ 的线性函数。
 这也是对真实概率的一个近似。
 
