--- a/content/post/eslii/ch05/ch05_07.zh.md
+++ b/content/post/eslii/ch05/ch05_07.zh.md
@@ -19,33 +19,46 @@ caption = ""
 preview = true
 +++
 
-So far we have focused on one-dimensional spline models. Each of the ap-
-proaches have multidimensional analogs. Suppose X ∈ IR 2 , and we have
-a basis of functions h 1k (X 1 ), k = 1, . . . , M 1 for representing functions of
-coordinate X 1 , and likewise a set of M 2 functions h 2k (X 2 ) for coordinate
-X 2 . Then the M 1 × M 2 dimensional tensor product basis defined by
+之前一直讨论的是一维的样条模型，
+然而每个模型均可用在多维的场景中。
+假设 $X \in \mathbb{R}^2$，
+$h\_{1k}(X\_1)$，$k=1,\dots,M\_1$ 为表达坐标 $X\_1$ 的函数的一组基函数，
+类似地，
+$h\_{2k}(X\_2)$，$k=1,\dots,M\_1$ 为表达坐标 $X\_2$ 的函数的一组基函数。
+则 $M\_1 \times M\_2$ 维的**张量积（tensor product）**基函数定义为：
 
 $$ g\_{jk}(X) = h\_{1j}(X\_1) h\_{2k}(X\_2),
 j = 1,\dots,M\_1, k = 1, \dots, M\_2 \tag{5.35}$$
 
-can be used for representing a two-dimensional function:
+则一个二维的函数可用上式的基函数表达为：
 
 $$ g(X) = \sum\_{j=1}^{M\_1} \sum\_{k=1}^{M\_2} \theta\_{jk}g\_{jk}(X) \tag{5.36}$$
 
 {{< figure src="http://public.guansong.wang/eslii/ch05/eslii_fig_05_10.png"
-  title="**图5.10**："
+  title="**图5.10**：B 样条的张量积基函数，图中展示了某几对组合。其中每个二维函数均为相应的两个一维边际函数的乘积。"
 >}}
 
-Figure 5.10 illustrates a tensor product basis using B-splines. The coeffi-
-cients can be fit by least squares, as before. This can be generalized to d
-dimensions, but note that the dimension of the basis grows exponentially
-fast—yet another manifestation of the curse of dimensionality. The MARS
-procedure discussed in Chapter 9 is a greedy forward algorithm for includ-
-ing only those tensor products that are deemed necessary by least squares.
+图 5.10 展示了 B 样条的张量积基函数。
+系数可以与之前一样用最小二乘拟合得出。
+这种处理方法可以推广到 $d$ 维度，
+然而需要注意基函数的维度以指数级别快速地增加
+——维数灾难的再现。
+第九章会介绍一个只使用最小二乘中必需的张量积基函数的贪心前向算法，MARS。
 
 {{< figure src="http://public.guansong.wang/eslii/ch05/eslii_fig_05_11.png"
   title="**图5.11**："
 >}}
+The simulation example of Figure 2.1. The upper panel shows the
+decision boundary of an additive logistic regression model, using natural splines
+in each of the two coordinates (total df = 1 + (4 − 1) + (4 − 1) = 7). The lower
+panel shows the results of using a tensor product of natural spline bases in each
+coordinate (total df = 4 × 4 = 16). The broken purple boundary is the Bayes
+decision boundary for this problem.
+
+图 5.11 演示了在第二章的分类模拟例子中，加性和张量积（自然）样条的区别。
+在二分类的训练样本上拟合对数几率回归模型 $\text{logit}[\text{Pr}(T|x)]=h(x)^T\theta$，
+估计的判别边界为等值线 $h(x)^T\hat{\theta} = 0$。
+张量积基函数方法得到的判别边界更灵活
 
 Figure 5.11 illustrates the difference between additive and tensor product
 (natural) splines on the simulated classification example from Chapter 2.
