--- a/content/post/eslii/ch05/ch05_07.zh.md
+++ b/content/post/eslii/ch05/ch05_07.zh.md
@@ -90,7 +90,7 @@ $$ J[f] = \iint\_{\mathbb{R}} \left [
 $$ f(x) = \beta\_0 + \beta^T x + \sum\_{j=1}^N \alpha\_j h\_j(x) \tag{5.39}$$
 
 其中 $h\_j(x) = \\|x - x\_j\\|^2 \log \\|x-x\_j\\|。
-这样的 $h\_j(x)$ 是一种**径向基函数（radial basisi function）**，
+这样的 $h\_j(x)$ 是一种**径向基函数（radial basis function）**，
 下一节会详细介绍。
 将等式 5.39 代入到等式 5.37，则可化简到一个有限维度的惩罚最小二乘问题，
 从而可以解出系数的估计值。
