--- a/content/post/eslii/ch06/ch06_01.zh.md
+++ b/content/post/eslii/ch06/ch06_01.zh.md
@@ -19,9 +19,25 @@ caption = ""
 preview = true
 +++
 
-In Chapter 2, we motivated the k–nearest-neighbor average
+在第二章中，简单介绍了 k-近邻的平均作为回归函数 $E(Y|X=x)$ 的估计：
 
 $$\hat{f}(x) = \text{Ave}(y\_i|x\_i \in N\_k(x)) \tag{6.1}$$
+
+其中的 $N\_k(x)$ 为与 $x$ 的平方距离最近的 $k$ 个点的集合，
+“Ave” 代表了平均数（均值）的计算。
+其基本思路是放宽条件期望的定义，计算目标点邻域上的平均，如图 6.1 的左边所示。
+
+{{< figure
+  src="http://public.guansong.wang/eslii/ch06/eslii_fig_06_01.png"
+  title="**图6.1**："
+>}}
+
+在此例中使用了 30 个近邻点，
+即在 $x\_0$ 的拟合值为输入变量点 $x\_i$ 与 $x\_0$ 最接近的 30 个样本的输出变量的平均。
+如此在不同的 $x\_0$ 点处拟合，则可描出绿色的曲线。
+由于 $\hat{f}(x)$ 对 $x$ 不连续，绿色曲线比较崎岖。
+将 $x\_0$ 点从左向右移动，$k$ 个近邻点会保持不变，
+
 
 as an estimate of the regression function E(Y |X = x). Here N k (x) is the set
 of k points nearest to x in squared distance, and Ave denotes the average
