--- a/content/post/eslii/ch06/ch06_01.zh.md
+++ b/content/post/eslii/ch06/ch06_01.zh.md
@@ -2,6 +2,10 @@
 title = "ESL-6.1 一维的核平滑器"
 summary = """
 统计学习基础（译注）第六章第一节，第 192-198 页。
+利用核函数在局部的加权平均，可以得到一个平滑的函数拟合，
+但在边界附近会有较大偏差。
+局部回归可解决这种由于样本分布不均产生的偏差。
+回归的多项式级数越高，消除的偏差级数越大，但产生的方差越高。
 """
 
 date = 2018-11-21T16:00:00+08:00
