--- a/content/post/eslii/ch06/ch06_05.zh.md
+++ b/content/post/eslii/ch06/ch06_05.zh.md
@@ -102,7 +102,7 @@ $$\begin{align}
 直接简单地对这个二元输出变量进行平滑来估计条件患病率。
 这相当与拟合一个局部常数的对数几率回归模型（练习 6.5）。
 为了获得局部线性平滑的偏差修正能力，
-通常会在无限制的对数几率度量（logit scale）上进行这样的计算。
+通常会在无限制的对数几率尺度（logit scale）上进行这样的计算。
 
 在对数几率回归中，在计算参数估计时通常也会计算它们的标注误差。
 如图中所见，这也可以在局部完成，逐点地计算拟合值的标准误差范围。
