--- a/content/post/eslii/ch06/ch06_09.zh.md
+++ b/content/post/eslii/ch06/ch06_09.zh.md
@@ -34,6 +34,6 @@ preview = true
 例如通过交叉验证，其计算成本为 $O(N^2)$。
 常见的局部回归实现，比如 S-PLUS 和 R 中的 `loess` 函数以及
 `locfit` 方法（Loader, 1999），
-使用 triangulation schemes 来减少计算量。
+使用三角剖分（triangulation）来减少计算量。
 其方法是在 $M$ 个精确挑选出的位置上拟合（$O(NM)$），
 然后在其他位置的求值使用混合方法对已有的拟合进行插值（$O(M)$）。
