--- a/content/post/eslii/ch03/ch03_01.zh.md
+++ b/content/post/eslii/ch03/ch03_01.zh.md
@@ -21,10 +21,14 @@ caption = ""
 preview = false
 +++
 
-线性回归模型假设回归函数 $E(Y|X)$ 对输入变量 $X\_1, \dots, X\_p$ 呈线性。
-在计算机时代之前，统学计中就已建立起了线性模型的理论，然而在今天的计算机时代，它仍然值得学习和应用。
-线性模型算法简单，却通常可以满足实际需求并提供输入变量如何影响输出变量的解释性的说明。
-线性模型有时会在预测表现中优于更高深的非线性模型，特别是在训练样本小、样本信噪比低或数据样本采样稀疏的情况下。
+线性回归模型假设
+回归函数 $E(Y|X)$ 对输入变量 $X\_1, \dots, X\_p$ 呈线性。
+在计算机时代之前，统学计中就已建立起了线性模型的理论，
+然而在今天的计算机时代，它仍然值得学习和应用。
+线性模型算法简单，却通常可以满足实际需求
+并提供输入变量如何影响输出变量的解释性的说明。
+线性模型有时会在预测表现中优于更高深的非线性模型，
+特别是在训练样本小、样本信噪比低或数据样本采样稀疏的情况下。
 最后，应用在输入变量的某种变换的线性模型，可以很大地拓展其能力范围。
 这种推广方法就是第五章会介绍的基函数方法。
 
