--- a/content/post/eslii/ch03/ch03_02.zh.md
+++ b/content/post/eslii/ch03/ch03_02.zh.md
@@ -1,5 +1,5 @@
 +++
-title = "ESL-3.2 线性回归模型和最小二乘法"
+title = "ESL-3.2 线性回归模型和最小二乘"
 summary = """
 统计学习基础（译注）第三章第二节，第 44-56 页。
 系统介绍线性回归模型的最小二乘解及其在向量空间上的含义，
@@ -24,64 +24,76 @@ caption = ""
 preview = true
 +++
 
-与前文一样，我们的目标是根据输入变量向量
-$X^T = (X\_1, X\_2, \dots, X\_p)$
-来预测取值为实数的输出变量 $Y$。
-线性模型的形式为：
+如第二章所介绍，我们有一个输入变量向量
+$X^T = (X\_1, X\_2, \dots, X\_p)$，
+目的是预测一个取值为实数的输出变量 $Y$。
+线性模型的表达式为：
 
-$$f(X) = \beta\_0 + \sum\_{j=1}^p X\_j\beta\_j \tag{3.1}$$
+$$f(X) = \beta\_0 + \sum\_{j=1}^p X\_j\beta\_j
+\tag{3.1}$$
 
-线性模型的假设是回归函数 $E(Y|X)$ 是线性的，或者至少近似于线性的。
-式中的 $\beta\_j$ 为未知参数或系数，
-输入变量 $X\_j$ 有多种可能的形式：
+线性模型假设回归函数 $E(Y|X)$ 是线性的，或者至少足够近似于线性的。
+式中 $\beta\_j$ 是未知的参数或系数，
+输入变量 $X\_j$ 可以有多种类型：
 
 - 量化的输入变量；
-- 量化输入变量的某个转化，比如对数、平方根或平方；
-- 基函数的拓展，比如 $X\_2 = X\_1^2$，$X\_3 = X\_1^3$，从而得到一个多项式；
-- 分类变量的哑变量或数值编码。例如，某个有五种类别的分类变量 $G$，可以编码为 $X\_j, j=1,\dots,5$，
-  使得 $X\_j = I(G=j)$。可以用这组输入变量 $X\_j$ 可替代 $G$。
-  由于这 5 个变量中，只能有一个为 1，其他 4 个为 0，所以这些变量是不独立的。
-- 输入变量之间的交叉影响，例如 $X\_3 = X\_1 \cdot X\_2$。
+- 量化输入变量的某种变换，比如取对数、平方根、平方；
+- 构建多项式表达式的基函数展开，
+  比如 $X\_2 = X\_1^2$，$X\_3 = X\_1^3$。
+- 分类输入变量的哑变量或数值编码。
+  例如，对一个有五种类别的分类变量 $G$，
+  可构建五个变量 $X\_j, j=1,\dots,5$，满足 $X\_j = I(G=j)$。
+  其中只能有一个为 1，其他都为 0，
+  因此与一组依赖于类别的常数一起，
+  这组变量可完全重现 $G$ 变量的影响，
+  即 $\sum\_{j=1}^5 X\_j\beta\_j$。
+- 输入变量之间的交叉，例如 $X\_3 = X\_1 \cdot X\_2$。
 
-但不管 $X\_j$ 的形式如何，模型对参数是线性的。
+不管 $X\_j$ 的形式如何，模型对参数是线性的。
 
-通常有一组用来估计参数 $\beta$ 的训练样本数据 $(x\_1,y\_1),\dots,(x\_N,y\_N)$。
-某个样本 $x\_i = (x\_{i1},x\_{i2},\dots,x\_{ip})^T$ 是一组输入变量的值。
-最常见的估计方法是 *最小二乘法（least squares）* ，
-即选取系数 $\beta=(\beta\_0,\beta\_1,\dots,\beta\_p)^p$
-使得残差平方和（residual sum of squares）最小：
+我们通常有一组用来估计参数 $\beta$ 的训练数据
+$(x\_1,y\_1),\dots,(x\_N,y\_N)$。
+每个 $x\_i = (x\_{i1},x\_{i2},\dots,x\_{ip})^T$
+是第 i 个样本的输入变量取值的向量。
+最常见的估计方法是**最小二乘**（least squares），
+通过对最小化残差平方和（residual sum of squares）
+来确定系数 $\beta=(\beta\_0,\beta\_1,\dots,\beta\_p)^p$：
 
 $$\begin{align}
 \text{RSS}(\beta) &= \sum\_{i=1}^N (y\_i-f(x\_i))^2 \\\\ &=
-\sum\_{i=1}^N (y\_i- \beta\_0 - \sum\_{j=1}^p x\_{ij}\beta\_j)^2 \tag{3.2}
-\end{align}$$
+\sum\_{i=1}^N (y\_i - \beta\_0 - \sum\_{j=1}^p x\_{ij}\beta\_j)^2
+\tag{3.2}\end{align}$$
 
-从统计学的角度看，如果训练样本 $(x\_i,y\_i)$ 是从样本空间中独立随机采集的，
-那么这个计算标准是合理的。
-甚至当 $x\_i$ 并不是完全随机采集的，
-只要输出变量 $y\_i$ 在条件于输入变量 $x\_i$ 下是相互独立的，
-这个计算标准仍然有效。
-图 3.1 演示了在训练样本点 $(X,Y)$ 所在的 $\mathbb{R}^{p+1}$ 空间上，
-最小二乘法拟合的几何含义。
-注意等式 3.2 没有任何关于模型 3.1 正确与否的假设，
-其作用仅仅是找到与训练样本拟合最好的那条线。
-不管真实的数据是怎样的，最小二乘法的拟合总是有一定意义的，
-等式 3.2 中的 RSS 衡量了（拟合线与样本的）平均欠拟合程度。
+从统计学的角度看，
+如果训练样本 $(x\_i,y\_i)$ 是从样本空间中独立随机采样的，
+那么这个目标函数的选择是合理的。
+既使 $x\_i$ 并不是完全随机采样的，
+只要输出变量 $y\_i$ 在条件于输入变量 $x\_i$ 下相互独立，
+这仍是个合理的目标函数。
 
-{{< figure src="http://public.guansong.wang/eslii/ch03/eslii_fig_03_01.png"
-  title="**图3.1**：$X \in \mathbb{R}^2$ 空间上的最小二乘拟合，寻找可以使距离 $Y$ 的残差平方和最小的 $X$ 的线性函数。"
+{{< figure
+  src="http://public.guansong.wang/eslii/ch03/eslii_fig_03_01.png"
+  title="**图3.1**：$X \in \mathbb{R}^2$ 空间上的最小二乘拟合，寻找最小化与 $Y$ 的残差的平方和的 $X$ 的线性函数。"
 >}}
 
-那么如何对等式 3.2 求最小？
-记 $\mathbf{X}$ 训练样本的 $N\times (p+1)$ 的矩阵，
-其每一行对应着一个输入变量向量（第一个位置为常数 1），
-记 $\mathbf{y}$ 为长度为 $N$ 的训练样本输出变量向量。
+图 3.1 在训练样本点 $(X,Y)$ 所在的 $\mathbb{R}^{p+1}$ 空间上，
+演示了最小二乘法拟合的几何含义。
+注意等式 3.2 没有任何关于模型 3.1 正确与否的假设，
+只是寻找训练样本的最佳线性拟合。
+不管真实的数据是怎样的，最小二乘的拟合从直觉上也是合理的；
+目标函数 RSS 衡量了（拟合线与样本的）平均拟合不足程度。
+
+那么如何最小化等式 3.2？
+记 $\mathbf{X}$ 为代表训练样本的 $N \times (p+1)$ 的矩阵，
+其每行对应着一个输入变量向量（向量第一个元素为常数 1），
+记 $\mathbf{y}$ 为代表训练样本输出变量的长度为 $N$ 的向量。
 则残差平方和可写为：
 
 $$\text{RSS}(\beta) =
-(\mathbf{y} - \mathbf{X}\beta)^T(\mathbf{y} - \mathbf{X}\beta) \tag{3.3}$$
+(\mathbf{y} - \mathbf{X}\beta)^T(\mathbf{y} - \mathbf{X}\beta)
+\tag{3.3}$$
 
-这是一个含有 $p+1$ 个参数的二次函数。
+这是 $p+1$ 个参数上的二次函数。
 对 $\beta$ 求导：
 
 $$\begin{align}
@@ -91,8 +103,9 @@ $$\begin{align}
 2\mathbf{X}^T\mathbf{X}
 \end{align}\tag{3.4}$$
 
-暂时先假设 $\mathbf{X}$ 为列满秩矩阵，因而 $\mathbf{X}^T\mathbf{X}$ 为正定矩阵[^1]，
-设置一阶导数为 0：
+（暂时）先假设 $\mathbf{X}$ 为列满秩矩阵，
+因此 $\mathbf{X}^T\mathbf{X}$ 是正定矩阵[^1]，
+将一阶导数设置为 0：
 
 $$\mathbf{X}^T(\mathbf{y} - \mathbf{X}\beta) = 0 \tag{3.5}$$
 
@@ -100,77 +113,82 @@ $$\mathbf{X}^T(\mathbf{y} - \mathbf{X}\beta) = 0 \tag{3.5}$$
 
 $$\hat{\beta} = (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{y}\tag{3.6}$$
 
-则拟合的线性模型在输入变量向量 $x\_0$ 点的预测值为
-$\hat{f}(x\_0) = (1, x\_0)^T \hat{\beta}$，
-训练样本上的拟合值为：
+在输入变量向量 $x\_0$ 点的预测值为
+$\hat{f}(x\_0) = (1, x\_0)^T \hat{\beta}$；
+训练样本的拟合值为：
 
 $$\hat{y} = \mathbf{X}\hat{\beta} =
 \mathbf{X}(\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{y}
 \tag{3.7}$$
 
-即 $\hat{y\_i} = \hat{f}(x\_i)$。
-等式 3.7 中的矩阵
+或者 $\hat{y\_i} = \hat{f}(x\_i)$。
+等式 3.7 中，
+$\mathbf{y}$ 与矩阵
 $\mathbf{H} = \mathbf{X}(\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T$
-也称为“帽子”矩阵，因为在上式中经过它的转换后 $\mathbf{y}$ 就戴上了帽子 $\hat{\mathbf{y}}$。
+相乘后就戴上了帽子 $\hat{\mathbf{y}}$，
+所以这个矩阵也称为“帽子”矩阵。
 
 {{< figure src="http://public.guansong.wang/eslii/ch03/eslii_fig_03_02.png"
   title="**图3.2**：两个输入变量的最小二乘法在样本 $N$ 维空间上的几何含义。输出变量样本向量 $\mathbf{y}$ 在输出变量样本向量 $\mathbf{x\_1}$ 和 $\mathbf{x\_1}$ 生成的超平面上的投影 $\hat{\mathbf{y}}$ 即为最小二乘法的拟合值的样本向量。"
 >}}
 
-图 3.2 在 $\mathbb{R}^N$ 空间上表现了最小二乘法拟合的几何含义。
+图 3.2 在 $\mathbb{R}^N$ 空间上用另一个方式展示最小二乘估计的几何表现。
 将 $\mathbf{X}$ 的列向量记为
-$\mathbf{x}\_0,\mathbf{x}\_1,\dots,\mathbf{x}\_p$。
-其中第一个为常数 $\mathbf{x\_0} \equiv 1$，
-它在下面的推导没有特殊之处，与其他变量一样看待。
-这些向量会生成一个 $\mathbb{R}^N$ 上的子空间，也被称为 $\mathbf{X}$ 的列空间。
-拟合的过程是在寻找使得
+$\mathbf{x}\_0,\mathbf{x}\_1,\dots,\mathbf{x}\_p$，
+其中 $\mathbf{x\_0} \equiv 1$。
+在下面的推导中，第一个常数向量与其他变量的处理方式相同。
+这些向量会生成一个 $\mathbb{R}^N$ 上的子空间，
+也被称为 $\mathbf{X}$ 的列空间。
+最小化
 $\text{RSS}(\beta) = \\|\mathbf{y} - \mathbf{X}\beta\\|^2$
-最小化的 $\hat{\beta}$，
-而且实际上是使得残差向量 $\mathbf{y} - \hat{\mathbf{y}}$ 与这个列空间正交[^2]。
-在等式 3.5 可以看出这个正交的数学表达形式，
-因此拟合的结果 $\hat{\mathbf{y}}$ 也是 $\mathbf{y}$ 在这个列空间上的
-*正交投影（orthogonal projection）* 。
+的过程，等价于寻找使残差向量
+$\mathbf{y} - \hat{\mathbf{y}}$ 与这个列空间正交[^2]
+的 $\hat{\beta}$。
+等式 3.5 体现了这个正交的关系，
+因此拟合的结果 $\hat{\mathbf{y}}$ 是 $\mathbf{y}$ 在这个列空间上的
+**正交投影**（orthogonal projection）。
 帽子矩阵 $\mathbf{H}$ 完成了正交投影的计算，因此也被称为投影矩阵。
 
-当 $\mathbf{X}$ 的列向量不是线性无关时，那么 $\mathbf{X}$ 便不是列满秩矩阵。
-两个完全相关的输入变量，比如 $\mathbf{x}\_2 = 3\mathbf{x}\_1$，
-即是一个典型的例子。
-这时 $\mathbf{X}^T\mathbf{X}$ 是奇异矩阵，最小二乘法无法得到惟一的解 $\hat{\beta}$。
-然而其几何意义仍然成立，
-拟合值 $\hat{\mathbf{y} = \mathbf{X}\hat{\beta}}$ 仍然是
-$\mathbf{y}$ 在 $\mathbf{X}$ 的列空间上的正交投影。
-只是这时有很多种 $\mathbf{X}$ 列向量的组合方式可以表达这同一个投影。
+$\mathbf{X}$ 的列向量有可能不是线性独立，
+那么 $\mathbf{X}$ 便不是列满秩矩阵。
+两个完全相关的输入变量（比如 $\mathbf{x}\_2 = 3\mathbf{x}\_1$）
+就是一个例子。
+这时 $\mathbf{X}^T\mathbf{X}$ 是个奇异矩阵，
+最小二乘无法得到唯一解 $\hat{\beta}$。
+然而拟合值 $\hat{\mathbf{y}} = \mathbf{X}\hat{\beta}$
+仍然是 $\mathbf{y}$ 在 $\mathbf{X}$ 列空间上的正交投影。
+只是这时有不止一种 $\mathbf{X}$ 列向量的组合方式可以表达这个投影。
 出现非满秩输入变量矩阵的一个最常见原因是
-一个或多个分类变量的编码方式产生了多余的列向量。
-对此自然的解决方法是重新编码或者去掉其中哦功能多余的列。
+一个或多个分类变量的编码方式出现了冗余。
+因此对无唯一解的自然解决方案是重新编码或者去掉 $\mathbf{X}$ 中冗余的列。
 大多数回归软件程序会检测 $\mathbf{X}$ 中的冗余列，
-并自动地采用某些去除这些冗余的算法。
-另一个会造成非满秩矩阵的原因是输入变量的个数 $p$ 大于 训练样本个数 $N$，
-这在信号和图像识别领域可能遇到。
-通常的解决方法是过滤掉一些输入变量，
-或者用正则化来控制拟合（第 5.2.3 节和第十八章）。
+并自动地采用某些去除这些冗余的策略。
+另一个可造成非满秩的原因是输入变量个数 $p$ 大于训练样本个数 $N$，
+这在信号和图像识别领域常出现。
+通常解决方法是过滤掉一些输入变量，
+或者用正则化来控制拟合（见第 5.2.3 节和第十八章）。
 
-在之前的推导过程中，并没有对真实的概率分布做太多假设。
-然而为了进一推导估计量 $\hat{\beta}$ 的性质，
-现假设输出变量的样本 $y\_i$ 互不相关，有固定的方差 $\sigma^2$，
+上述讨论没有对数据的真实概率分布做太多假设。
+然而为了进一推导 $\hat{\beta}$ 的性质，
+现假设输出变量样本 $y\_i$ 互不相关，有固定的方差 $\sigma^2$，
 并且将 $x\_i$ 视为非随机的常量。
-从等式 3.6 可以推导出最小二乘法的参数估计量的协方差矩阵为：
+从等式 3.6 可推导出最小二乘参数估计量的协方差矩阵为：
 
 $$\text{Var}(\hat{\beta}) = (\mathbf{X}^T\mathbf{X})^{-1} \sigma^2 \tag{3.8}$$
 
-方差 $\sigma^2$ 通常用下式来估计：
+通常用下式来估计方差 $\sigma^2$：
 
 $$\hat{\sigma}^2 = \frac{1}{N-p-1} \sum\_{i=1}^N (y\_i-\hat{y\_i})^2$$
 
 注意其中的除数为 $N-p-1$ 而不是类似于样本平均的 $N$，
-这使得估计量 $\hat{\sigma}^2$ 是一个无偏估计量：
+这使得估计量 $\hat{\sigma}^2$ 是无偏估计量：
 $E(\hat{\sigma}^2) = \sigma^2$。
 
-为了对模型的参数做统计推断，
-需要对数据的概率分布做进一步的假设。
+为了对模型和参数做统计推断，
+需要做进一步的假设。
 首先，假设等式 3.1 为输出变量期望的正确模型，
 即 $Y$ 的条件期望对 $X\_1, \dots, X\_p$ 呈线性关系。
-其次，假设 $Y$ 围绕着其期望为高斯分布且有可加性。
+其次，假设 $Y$ 与其期望的偏离是加性的且服从高斯分布。
 因此：
 
 $$\begin{align}
@@ -180,21 +198,22 @@ Y &= E(Y|X\_1, \dots, X\_p) + \varepsilon \\\\ &=
 
 其中误差项 $\varepsilon$ 为高斯随机变量，期望为 0 方差为 $\sigma^2$，
 即 $\varepsilon \sim \mathcal{N}(0, \sigma^2)$。
-从上式 3.9 可推导出：
+
+从等式 3.9 可推导出：
 
 $$\hat{\beta} \sim \mathcal{N}(\beta,
 (\mathbf{X}^T\mathbf{X})^{-1}\sigma^2) \tag{3.10}$$
 
-此为一个多元正态分布，期望向量和协方差矩阵如上式所示。并且：
+这是一个多元正态分布，期望向量和协方差矩阵如上式所示。并且：
 
 $$(N-p-1)\hat{\sigma}^2 \sim \sigma^2\chi^2\_{N-p-1} \tag{3.11}$$
 
 即自由度为 $N-p-1$ 的卡方分布。
-此外，估计量 $\hat{\beta}$ 与 $\hat{\sigma}^2$ 彼此独立。
-根据以上的概率分布，可以假设检验和建立参数 $\beta\_j$ 的置信区间。
+此外，$\hat{\beta}$ 与 $\hat{\sigma}^2$ 统计意义上相互独立。
+根据以上的概率分布，可对参数 $\beta\_j$ 进行假设检验和建立置信区间。
 
-我们构造 *标准（回归）系数（standardized (regression) coefficients）*
-或 *Z 分数（Z-score）* 来对检验某个系数的假设 $\beta\_j = 0$：
+我们构造 **标准（回归）系数**（standardized (regression) coefficients）
+或 **Z 分数**（Z-score）来检验某个系数的假设 $\beta\_j = 0$：
 
 $$z\_j = \frac{\hat{\beta\_j}}{\hat{\sigma}\sqrt{v\_j}}\tag{3.12}$$
 
@@ -646,6 +665,12 @@ $y\_i$ 为观测样本 i 的长度为 K 的向量。
 
 第 3.7 节会继续讨论多个输出变量的问题，
 以及一些联合回归可改善预测结果的场景。
+
+### 练习
+
+**3.1** 证明 F 统计量
+
+**3.2** 
 
 [^1]: 二阶导数矩阵为正定矩阵，故在一阶导数为 0 的点，为函数的极小值点。
 [^2]: 注意图 3.2 与图 3.1 的想要表达的维度是不同的，前者是 $N$ 维，后者是 $p+1$ 维，只是为了理解都画成了三维的图形。图 3.2 中黄色的平面即代表着列空间，上面的点均为某个线性模型的实现，拟合的过程即寻找这个平面上与训练样本的输出实现向量最近的点。用三维图像中的直觉来说，最近的点即为向量 $\mathbf{y}$ 在这个平面上的投影点。
