--- a/content/post/eslii/ch07/ch07_05.zh.md
+++ b/content/post/eslii/ch07/ch07_05.zh.md
@@ -87,7 +87,7 @@ $$\text{AIC}(\alpha) = \overline{\text{err}}(\alpha) +
 那么乐观值会高于 $(2d/N)\sigma^2\_\varepsilon$。
 换句话说，
 如果从输入变量中选取 $d$ 个变量的最优拟合模型，
-拟合的参数有效个数大于 $d$。
+拟合的有效参数个数大于 $d$。
 
 {{< figure
   src="http://public.guansong.wang/eslii/ch07/eslii_fig_07_04.png"
