Bug fix; partial update.

--- a/content/post/eslii/ch07/ch07_09.zh.md
+++ b/content/post/eslii/ch07/ch07_09.zh.md
@@ -1,5 +1,5 @@
 +++
-title = "ESL-7.9 Vapnik–Chervonenkis Dimension 😱"
+title = "ESL-7.9 万普尼克-泽范兰杰斯维度 Vapnik–Chervonenkis Dimension 😱"
 summary = """
 统计学习基础（译注）第七章第九节，第 237-241 页。
 """
@@ -19,12 +19,17 @@ caption = ""
 preview = true
 +++
 
-A difficulty in using estimates of in-sample error is the need to specify the
-number of parameters (or the complexity) d used in the fit. Although the
-effective number of parameters introduced in Section 7.6 is useful for some
-nonlinear models, it is not fully general. The Vapnik–Chervonenkis (VC)
-theory provides such a general measure of complexity, and gives associated
-bounds on the optimism. Here we give a brief review of this theory.
+使用样本内误差估计的一个难点是需要确定拟合中用到的参数的个数（或复杂度）$d$。
+虽然在[第 7.6 节]({{< ref "/post/eslii/ch07/ch07_06.zh.md" >}})
+介绍的有效参数个数适用于一些非线性模型，但并不能满足所有的应用场景。
+万普尼克-泽范兰杰斯（Vapnik–Chervonenkis）理论
+提供了一个复杂度的一般性的度量定义，以及对应的乐观值边界。
+以下为这个理论的简单综述。
+
+假设有一类函数 $\\{f(x,\alpha)\\}$，由参数向量 $\alpha$ 索引，
+定义域为 $x\in \mathbb{R}^p$。
+现假设 $f$ 为一个指示函数，即取值为 0 或 1。
+
 
 Suppose we have a class of functions {f (x, α)} indexed by a parameter
 vector α, with x ∈ IR p . Assume for now that f is an indicator function,
@@ -38,6 +43,11 @@ parameter: despite this, it doesn’t seem reasonable to conclude that it has
 less complexity than the linear indicator function I(α 0 + α 1 x) in p = 1
 dimension.
 
+{{< figure
+  src="http://public.guansong.wang/eslii/ch07/eslii_fig_07_05.png"
+  title="**图7.5**："
+>}}
+
 The Vapnik–Chervonenkis dimension is a way of measuring the com-
 plexity of a class of functions by assessing how wiggly its members can
 be.
@@ -49,6 +59,11 @@ be.
 A set of points is said to be shattered by a class of functions if, no matter
 how we assign a binary label to each point, a member of the class can
 perfectly separate them.
+
+{{< figure
+  src="http://public.guansong.wang/eslii/ch07/eslii_fig_07_06.png"
+  title="**图7.6**："
+>}}
 
 Figure 7.6 shows that the VC dimension of linear indicator functions
 in the plane is 3 but not 4, since no four points can be shattered by a
@@ -117,6 +132,11 @@ structural risk minimization program can be successfully carried out is the
 support vector classifier, discussed in Section 12.2.
 
 ### 7.9.1 Example (Continued)
+
+{{< figure
+  src="http://public.guansong.wang/eslii/ch07/eslii_fig_07_07.png"
+  title="**图7.7**："
+>}}
 
 Figure 7.7 shows the results when AIC, BIC and SRM are used to select
 the model size for the examples of Figure 7.3. For the examples labeled KNN ,
