--- a/content/post/eslii/ch07/ch07_08.zh.md
+++ b/content/post/eslii/ch07/ch07_08.zh.md
@@ -7,7 +7,7 @@ summary = """
 
 date = 2018-12-04T15:42:00+08:00
 lastmod = 2018-12-04T15:42:00+08:00
-draft = true 
+draft = false
 math = true
 
 authors = ["Butters"]
