--- a/content/post/eslii/ch07/ch07_09.zh.md
+++ b/content/post/eslii/ch07/ch07_09.zh.md
@@ -132,7 +132,7 @@ $$\text{Err}\_\mathcal{T} \leq \overline{\text{err}} \left(
 
 {{< figure
   src="http://public.guansong.wang/eslii/ch07/eslii_fig_07_07.png"
-  title="**图7.7**：箱形图，展示了图 7.3 中四个场景中相对误差 $100 \times [\text{Err}\_\mathcal{T}(\hat{\alpha}) - \min\alpha \text{Err}\_\mathcal{T}(\alpha)] / [\max\_\alpha \text{Err}\_\mathcal{T}(\alpha) - \min\_\alpha \text{Err}\_\mathcal{T}(\alpha)]$ 的分布。这是使用选定模型想对于最优模型的误差。每个箱形图中有 100 个大小为 80 的训练集，计算误差的测试集大小为10,000。"
+  title="**图7.7**：箱形图，展示了图 7.3 中四个场景中相对误差 $100 \times [\text{Err}\_\mathcal{T}(\hat{\alpha}) - \min\_\alpha \text{Err}\_\mathcal{T}(\alpha)] / [\max\_\alpha \text{Err}\_\mathcal{T}(\alpha) - \min\_\alpha \text{Err}\_\mathcal{T}(\alpha)]$ 的分布。这是使用选定模型想对于最优模型的误差。每个箱形图中有 100 个大小为 80 的训练集，计算误差的测试集大小为10,000。"
 >}}
 
 图 7.7 展示了对图 7.3 的例子使用 AIC、BIC 和 SRM 选择模型大小的结果。
