--- a/content/post/eslii/ch08/ch08_01.zh.md
+++ b/content/post/eslii/ch08/ch08_01.zh.md
@@ -30,4 +30,4 @@ preview = true
 并描述其与最大似然和贝叶斯方法的联系。
 最后会介绍一些模型平均和改进的相关方法，
 包括委员会（committee）方法、自助聚合（bagging）、
-融合（stacking）和自主伞（bumping）。
+堆叠（stacking）和自助伞（bumping）。
