Copy text ch09_01.

--- a/content/post/eslii/ch02/ch02_03.zh.md
+++ b/content/post/eslii/ch02/ch02_03.zh.md
@@ -220,4 +220,4 @@ $\mathcal{N}((0,1)^T, \mathbf{I})$。
 [^3]: N > p
 [^4]: mixture gaussian, 先用高斯分布生成均值，再根据该均值的高斯分布生成随机数。
 [^5]: [Voronoi diagram](https://zh.wikipedia.org/wiki/%E6%B2%83%E7%BD%97%E8%AF%BA%E4%BC%8A%E5%9B%BE)
-[^6]: 原味为“stable to fit”。这里以及下一段中的的“稳定”，译者理解为模型对样本集的稳定性，即加入或去除某几个训练样本点会对模型产生多大的影响，以及样本中的离群值会对模型产生多大的影响。
+[^6]: 原文为“stable to fit”。这里以及下一段中的的“稳定”，译者理解为模型对样本集的稳定性，即加入或去除某几个训练样本点会对模型产生多大的影响，以及样本中的离群值会对模型产生多大的影响。
