--- a/content/post/eslii/ch09/ch09_01.zh.md
+++ b/content/post/eslii/ch09/ch09_01.zh.md
@@ -398,7 +398,7 @@ Z 分数是系数与其标准误差的比值，
 并对类别 1 的观测值使用权重 $L\_{10}$。
 再用同上的估计贝叶斯规则进行预测。
 这样得到的（实际的）类别 0 和 类别 1 的误差率分别为 1.2% 和 8.0%。
-后续会在树状（tree-based）模型的场景中会进一步讨论不相等损失的话题。
+后续会在树结构（tree-based）模型的场景中会进一步讨论不相等损失的话题。
 
 在拟合了加性模型后，需要核查是否加入某些交叉项可能会显著地改善拟合。
 可通过手动的方式进行，即加入某些或全部显著输入变量的乘积；
