--- a/content/post/eslii/ch08/ch08_05.zh.md
+++ b/content/post/eslii/ch08/ch08_05.zh.md
@@ -292,7 +292,7 @@ Q(\hat{\theta}^{(j)}, \hat{\theta}^{(j)})$。
 最大期望（EM）算法也可以被视为一个少数化（minorization）过程，
 见练习 8.7。
 
-### 8.5.3 最大化-最大化过程 EM as a Maximization–Maximization Procedure :scream:
+### 8.5.3 EM 是一个最大化-最大化过程 :scream:
 
 从另一个角度可将最大期望（EM）过程视为一个联合最大化算法。
 考虑函数：
