Change 增强 to 提升.

--- a/content/post/eslii/ch10/ch10_01.zh.md
+++ b/content/post/eslii/ch10/ch10_01.zh.md
@@ -5,7 +5,7 @@ summary = """
 提升方法在迭代过程中不断地调整样本的权重，
 提高拟合差的样本对基模型的影响力，
 再将所得到的一系列基模型的加权投票作为最终结果。
-本节以自适应增强为例演示了增强方法的效果。
+本节以自适应提升为例演示了提升方法的效果。
 """
 
 date = 2019-01-17T20:40:00+08:00
@@ -35,7 +35,7 @@ preview = true
 
 我们先介绍最流行的提升算法，
 由 Freund and Schapire (1997) 提出的
-“**自适应增强 M1**”[^2]（adaboost, adaptive boost）。
+“**自适应提升 M1**”[^2]（adaboost, adaptive boost）。
 考虑一个二分类问题，输出变量采用编码 $Y \in \\{-1, 1\\}$。
 给定一个自变量向量 $X$，一个分类器 $G(X)$
 会给出一个取值在 $\\{-1, 1\\}$ 中的预测。
@@ -56,11 +56,11 @@ $$ G(x) = \text{sign} \left ( \sum\_{m=1}^M \alpha\_m G\_m(x) \right ) \tag{10.1
 其中的 $\alpha\_1, \alpha\_2, \cdots, \alpha\_M$ 从提升算法的过程中得出，
 并被用作每个相应的分类器 $G\_m(x)$ 在投票中的权重。
 它们的作用是在最终投票中，给予序列中更准确的分类器更高的权重。
-图10.1 展示了自适应增强的示意图。
+图10.1 展示了自适应提升的示意图。
 
 {{< figure
   src="http://public.guansong.wang/eslii/ch10/eslii_fig_10_01.png"
-  title="**图10.1**：自适应增强的示意图。每一步迭代，在被权重调整过的数据集上训练分类器，然后将这一系列分类器结合在一起得出最终的预测。"
+  title="**图10.1**：自适应提升的示意图。每一步迭代，在被权重调整过的数据集上训练分类器，然后将这一系列分类器结合在一起得出最终的预测。"
 >}}
 
 在提升的每一步，为训练样本 $(x\_i, y\_i)$, $i = 1,2,\cdots,N$
@@ -77,7 +77,7 @@ $$ G(x) = \text{sign} \left ( \sum\_{m=1}^M \alpha\_m G\_m(x) \right ) \tag{10.1
 
 ----------
 
-### 算法 10.1：自适应增强 M1
+### 算法 10.1：自适应提升 M1
 
 1. 初始化样本权重为 $w\_i = 1/N, i = 1, 2, \cdots, N$.
 2. 对每个迭代步骤 $m = 1$ 到 $M$：
@@ -90,7 +90,7 @@ $$ G(x) = \text{sign} \left ( \sum\_{m=1}^M \alpha\_m G\_m(x) \right ) \tag{10.1
 
 ----------
 
-算法 10.1 详细说明了自适应增强 M1 算法。
+算法 10.1 详细说明了自适应提升 M1 算法。
 步骤 2.1 在加权的样本上训练当前的分类器 $G\_m(x)$。
 步骤 2.2 计算所得的加权错误率。
 步骤 2.3 计算分类器 $G\_m(x)$ 在最终的分类结果 $G(x)$ 中（第 3 行）所占的权重 $\alpha\_m$。
@@ -99,18 +99,18 @@ $G\_m(x)$ 误分类的样本的权重会放大到 $exp(\alpha\_m)$ 倍，
 相对地增加了它们对迭代下一步中的分类器 $G\_{m+1}(x)$ 的影响力。
 
 因为基分类器的输出为离散的类别标签，
-Friedman et al. (2000) 将自适应增强 M1 算法称为“离散自适应增强”。
+Friedman et al. (2000) 将自适应提升 M1 算法称为“离散自适应提升”。
 如果基分类器返回的是一个实数值的预测
 （例如将一个概率预测值映射到 $[-1,1]$ 区间上），
-自适应增强经过相应调整后也可适用。
-（参考 Friedman et al. (2000) 中的“连续自适应增强”）。
+自适应提升经过相应调整后也可适用。
+（参考 Friedman et al. (2000) 中的“连续自适应提升”）。
 
 {{< figure
   src="http://public.guansong.wang/eslii/ch10/eslii_fig_10_02.png"
-  title="**图10.2**：模拟数据（等式10.2）：基于决策树桩模型增强方法的测试错误率，横轴为增强的迭代次数。同时也展示了单个树桩模型和 244 个节点的分类决策树的错误率。"
+  title="**图10.2**：模拟数据（等式10.2）：基于决策树桩模型提升方法的测试错误率，横轴为提升的迭代次数。同时也展示了单个树桩模型和 244 个节点的分类决策树的错误率。"
 >}}
 
-图 10.2 演示了通过适应性增强极大地提高了一个很弱的分类器的表现。
+图 10.2 演示了通过适应性提升极大地提高了一个很弱的分类器的表现。
 特征变量 $X\_1$，……，$X\_{10}$ 服从独立的标准高斯分布（正态分布），
 真实的目标变量定义如下：
 
@@ -126,14 +126,14 @@ $$Y =  \begin{cases}
 这里使用的弱分类器是一个“树桩”模型：只有两个终节点的分类树。
 在训练样本上训练这个简单的分类器，其在测试集上错误率为 45.8%，
 对比随机猜测 50% 的错误率，可以说这是一个比较差的表现。
-然而，随着增强迭代次数的增加，错误率稳步地下降，
+然而，随着提升迭代次数的增加，错误率稳步地下降，
 在 400 次迭代后降到了 5.8%。
-可见，基于这个非常简单的弱分类器的增强方法，
+可见，基于这个非常简单的弱分类器的提升方法，
 将预测错误率降低到近乎原来的八分之一[^3]。
 它的表现也优于一个大的分类决策树（错误率 24.7%）。
-自这个方法出现后，有很多解释自适应增强得出准确分类器的能力的文献。
+自这个方法出现后，有很多解释自适应提升得出准确分类器的能力的文献。
 其中大部分都以分类决策树作为基模型 $G(x)$，带来的效果改善也常常十分显著。
-Breiman (NIPS Workshop, 1996) 称基于决策树的适应增强
+Breiman (NIPS Workshop, 1996) 称基于决策树的自适应提升
 为“世界上最好的现成可用的分类器”（另见 Breiman (1998)）。
 在数据挖掘的领域中尤其如此，
 本章第 10.7 节会更详细地讨论。
@@ -142,12 +142,12 @@ Breiman (NIPS Workshop, 1996) 称基于决策树的适应增强
 
 以下为本章的内容概要：
 
-* 自适应增强可以看作是拟合了基学习器的一个加性模型，对一个独特的指数损失函数进行最优化。
+* 自适应提升可以看作是拟合了基学习器的一个加性模型，对一个独特的指数损失函数进行最优化。
   这个损失函数与（负）二项分布的对数似然函数很相似（第 10.2-10.4 节）。
 * 指数损失函数的样本总体最小值点，是分类概率的对数几率（第 10.5 节）。
 * 在分类和回归问题中，可以选择比平方误差和指数损失函数更稳健的损失函数（第 10.6 节）。
-* 在数据挖掘的增强方法应用中，决策树被认为是理想的基学习器（第 10.7 和 10.9 节）。
-* 梯度增强模型（GBM）可基于任意的损失函数对树模型增强（第 10.10 节）。
+* 在数据挖掘的提升方法应用中，决策树被认为是理想的基学习器（第 10.7 和 10.9 节）。
+* 梯度提升模型（GBM）可基于任意的损失函数对树模型提升（第 10.10 节）。
 * 强调了“慢速学习”的重要性，
   通过对新进入模型的每一项进行收缩（shrinkage）（第 10.12 节）
   以及随机采样（第 10.12.2 节）来实现。
