Fix ch11_02 summary.

--- a/content/post/eslii/ch11/ch11_02.zh.md
+++ b/content/post/eslii/ch11/ch11_02.zh.md
@@ -2,6 +2,9 @@
 title = "ESL-11.2 投影寻踪回归"
 summary = """
 统计学习基础（译注）第十一章第二节，第 389-392 页。
+投影寻踪是一个泛逼近器，
+用输入变量线性组合的非线性函数可逼近任意的连续函数。
+它的本质思想与神经网络模型一致。
 """
 
 date = 2019-02-16T11:13:00+08:00
