--- a/content/post/eslii/ch11/ch11_04.zh.md
+++ b/content/post/eslii/ch11/ch11_04.zh.md
@@ -135,7 +135,7 @@ $$s\_{mi} = \sigma^\prime(\alpha\_m^T x\_i)
 依次根据每个训练样本更新梯度，
 对所有的训练样本进行多次的循环。
 在这个过程中，表达式 11.13 中的总和就变成了一个单次的加法。
-一个**训练阶段**（training epoch）指对整体训练集的一次扫描。
+一个**训练轮回**（training epoch）指对整体训练集的一次扫描。
 在线的训练使网络模型可以处理非常大的训练集，
 并可以随着新观测样本的到达更新权重。
 
