--- a/content/post/eslii/ch02/ch02_04.zh.md
+++ b/content/post/eslii/ch02/ch02_04.zh.md
@@ -170,6 +170,26 @@ $$\hat{G}(x) = \mathcal{G}\_k \text{ if } \text{Pr}(\mathcal{G}\_k|X=x) =
 例如，如果使用线性模型，则 $\hat{f}(X)$ 不一定是正数。
 在第四章我们会介绍多种基于模型的 $\text{Pr}(G|X)$ 估计方法。
 
+
+### 练习
+
+----------
+
+**练习 2.1**
+
+假设 $K$ 个类型的每一个都有一个对应的目标向量 $t\_k$，
+即一个只在第 $k$ 个位置为一其他位置都为零的向量。
+求证：如果 $\hat{y}$ 的所有元素和为一，
+那么按 $\hat{y}$ 中的最大值元素进行分类等价于
+按与之最接近的目标向量 $\text{argmin}\_k \\|t\_k-\hat{y}\\|$ 进行分类。
+
+----------
+
+**练习 2.2**
+
+推导计算图 2.5 中模拟例子中的贝叶斯判别边界。
+
+
 [^1]: 这里所说的基本条件，使概率空间 $(X,Y)$ 满足其联合概率分布函数可以分解成条件概率函数和边际概率函数的乘积，即 $\text{Pr}(X,Y) = \text{Pr}(Y|X)\text{Pr}(X)$，这里 $\text{Pr}(Y|X) = \text{Pr}(Y|X) / \text{Pr}(X)$。译者理解这个条件是“随机变量$Y$对于随机变量$X$是绝对连续的”。
 [^2]: 目标函数可写为 $E\_{Y|X}(Y^2|X=x) - 2c E\_{Y|X}(Y|X=x) + c^2$，这是一个 $c$ 的一元二次方程，即可得到使其最小的 $c$ 值。
 [^3]: 译者认为将 robust 翻译做“鲁棒”是非常搞笑的做法。
