--- a/content/post/eslii/ch02/ch02_05.zh.md
+++ b/content/post/eslii/ch02/ch02_05.zh.md
@@ -144,7 +144,7 @@ E\_{\mathcal{T}}[\hat{y}\_0 - E\_{\mathcal{T}}\hat{y}\_0]^2 +
 由于输出变量的函数中存在不确定的扰动项，在 MSE 中有一个额外的方差项 $\sigma^2$。
 偏差项为 0，方差项依赖于 $x\_0$。
 当 $N$ 足够大且样本 $\mathcal{T}$ 为随机选取，
-假设 $E(X)=0$，则 $X^TX\rightarrow N\text{Cov}(X)，并且：
+假设 $E(X)=0$，则 $X^TX\rightarrow N\text{Cov}(X)$，并且：
 
 $$\begin{align}
 E\_{x\_0}\text{EPE}(x\_0) &\sim
@@ -184,6 +184,46 @@ $\varepsilon \sim \mathcal{N}(0,1)$，
 这些模型的出发点都是通过某种假设来避免高维度问题中回归方程指数级增长的复杂度。
 
 在深入这些模型前，下一节会在模型预测的框架下，从宏观的角度理解统计模型。
+
+### 练习
+
+----------
+
+**练习 2.3**
+
+推导表达式 2.24。
+
+----------
+
+**练习 2.4**
+
+第 23 页中讨论的边界效应问题并不是在有界区域内的均匀分布样本所特有的。
+考虑服从一个球状的多元正态分布的一组输入变量
+$X \sim \mathcal{N}(0, \mathbf{I}\_p)$。
+任一样本点到原点的距离平方服从一个均值 $p$ 的卡方分布 $\chi\_p^2$。
+考虑一个从这个分布中生成的预测点 $x\_0$，
+并令 $a=x\_0 / \\|x\_0\\|$ 为对应的单位向量。
+令 $z\_i = a^T x\_i$ 为每个训练样本点在这个方向上的投影。
+
+证明：$z\_i$ 服从分布 $\mathcal{N}(0,1)$，
+其到原点的距离平方的期望为 $1$，
+而目标点到原点的距离平方的期望为为 $p$。
+
+因此，若 $p=10$，
+一个随机抽取的测试点与原点之间的标准差大概为 3.1，
+而所有训练样本在方向 $a$ 上的标准差的平均为 1。
+所以，大部分的预测点可视为落在了训练集的边界附近。
+
+----------
+
+**练习 2.4**
+
+1. 推导表达式 2.27。The last line makes use of (3.8) through a conditioning argument.
+2. 推导表达式 2.28。making use of the cyclic property of the trace
+operator [trace(AB) = trace(BA)], and its linearity (which allows us
+to interchange the order of trace and expectation).
+
+
 
 [^1]: 原点是 p 维度单元球体的中心点，如果靠近边界的点要比靠近原点的样本点多，那么对于其他样本点这个结论也同样成立。
 [^2]: 对比下文等式 2.26 的函数，其中输出变量包含了不确定的扰动项 $\varepsilon$。
